--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -78,12 +78,12 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>cache-macos-jdk-arm64</id>
+                                <id>cache-macos-jdk-aarch64</id>
                                 <goals>
                                     <goal>cache-jdk</goal>
                                 </goals>
                                 <configuration>
-                                    <jdkPathProperty>mvnjlink.jdk.macos.arm64.path</jdkPathProperty>
+                                    <jdkPathProperty>mvnjlink.jdk.macos.aarch64.path</jdkPathProperty>
                                     <provider>${embedded.jdk.provider}</provider>
                                     <providerConfig>
                                         <type>${embedded.jdk.type}</type>
@@ -170,7 +170,7 @@
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-jre-macos-arm64</id>
+                                <id>make-jre-macos-aarch64</id>
                                 <goals>
                                     <goal>jlink</goal>
                                 </goals>
@@ -178,9 +178,9 @@
                                     <toolJdk>${mvnjlink.jdk.work.path}</toolJdk>
                                     <jdepsReportPath>${project.build.directory}${file.separator}jdeps.out
                                     </jdepsReportPath>
-                                    <output>${project.build.directory}${file.separator}jre_macos_arm64</output>
+                                    <output>${project.build.directory}${file.separator}jre_macos_aarch64</output>
                                     <modulePaths>
-                                        <path>${mvnjlink.jdk.macos.arm64.path}${file.separator}jmods</path>
+                                        <path>${mvnjlink.jdk.macos.aarch64.path}${file.separator}jmods</path>
                                     </modulePaths>
                                     <options>
                                         <option>--compress=2</option>
@@ -289,7 +289,7 @@
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-linux-amd64-jdk</finalName>
+                                    <finalName>${project.build.finalName}-linux-jdk-amd64</finalName>
                                     <descriptors>
                                         <descriptor>src${file.separator}assembly${file.separator}linux_amd64.xml</descriptor>
                                     </descriptors>
@@ -303,7 +303,7 @@
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-windows-amd64-jdk</finalName>
+                                    <finalName>${project.build.finalName}-windows-jdk-amd64</finalName>
                                     <descriptors>
                                         <descriptor>src${file.separator}assembly${file.separator}windows_amd64.xml
                                         </descriptor>
@@ -318,23 +318,23 @@
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-macos-amd64-jdk</finalName>
+                                    <finalName>${project.build.finalName}-macos-jdk-amd64</finalName>
                                     <descriptors>
                                         <descriptor>src${file.separator}assembly${file.separator}mac_amd64.xml</descriptor>
                                     </descriptors>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>make-mac-arm64</id>
+                                <id>make-mac-aarch64</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>single</goal>
                                 </goals>
                                 <configuration>
                                     <appendAssemblyId>false</appendAssemblyId>
-                                    <finalName>${project.build.finalName}-macos-arm64-jdk</finalName>
+                                    <finalName>${project.build.finalName}-macos-jdk-aarch64</finalName>
                                     <descriptors>
-                                        <descriptor>src${file.separator}assembly${file.separator}mac_arm64.xml</descriptor>
+                                        <descriptor>src/assembly/mac_aarch64.xml</descriptor>
                                     </descriptors>
                                 </configuration>
                             </execution>
@@ -354,13 +354,13 @@
                                 <configuration>
                                     <fileset>
                                         <directory>
-                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-amd64-jdk.jar${file.separator}META-INF
+                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-jdk-amd64.jar${file.separator}META-INF
                                         </directory>
                                     </fileset>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>remove-manifest-from-mac-arm64-jar</id>
+                                <id>remove-manifest-from-mac-aarch64-jar</id>
                                 <goals>
                                     <goal>remove</goal>
                                 </goals>
@@ -368,7 +368,7 @@
                                 <configuration>
                                     <fileset>
                                         <directory>
-                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-arm64-jdk.jar${file.separator}META-INF
+                                            ${project.build.directory}${file.separator}${project.build.finalName}-macos-jdk-aarch64.jar${file.separator}META-INF
                                         </directory>
                                     </fileset>
                                 </configuration>
@@ -387,25 +387,25 @@
                                 </goals>
                                 <configuration>
                                     <sourceFile>
-                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-amd64-jdk.jar
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-jdk-amd64.jar
                                     </sourceFile>
                                     <destinationFile>
-                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-amd64-jdk.zip
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-jdk-amd64.zip
                                     </destinationFile>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>rename-mac-arm64-jar-to-zip</id>
+                                <id>rename-mac-aarch64-jar-to-zip</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>rename</goal>
                                 </goals>
                                 <configuration>
                                     <sourceFile>
-                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-arm64-jdk.jar
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-jdk-aarch64.jar
                                     </sourceFile>
                                     <destinationFile>
-                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-arm64-jdk.zip
+                                        ${project.build.directory}${file.separator}${project.build.finalName}-macos-jdk-aarch64.zip
                                     </destinationFile>
                                 </configuration>
                             </execution>
