fixed final name for dmg

--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -53,6 +53,8 @@
                             <dmg>
                                 <generate>true</generate>
                                 <autoFallback>true</autoFallback>
+                                <appendVersion>false</appendVersion>
+                                <dmgFileName>${project.build.finalName}-macos</dmgFileName>
                             </dmg>
                         </configuration>
                         <executions>
