--- a/battleships-resurrection/battleships-pc-win-launcher/pom.xml
+++ b/battleships-resurrection/battleships-pc-win-launcher/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.igormaznitsa</groupId>
     <artifactId>battleships-resurrection</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
   </parent>
 
   <artifactId>battleships-pc-win-launcher</artifactId>
