--- a/battleships-resurrection/battleships-client-a008/pom.xml
+++ b/battleships-resurrection/battleships-client-a008/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.igormaznitsa</groupId>
         <artifactId>battleships-resurrection</artifactId>
-        <version>1.1.1</version>
+        <version>1.1.2-SNAPSHOT</version>
     </parent>
     <artifactId>battleships-client-a008</artifactId>
     <packaging>jar</packaging>
