--- a/battleships-resurrection/pom.xml
+++ b/battleships-resurrection/pom.xml
@@ -71,6 +71,11 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>de.perdian.maven.plugins</groupId>
+                    <artifactId>macosappbundler-maven-plugin</artifactId>
+                    <version>1.19.0</version>
+                </plugin>
+                <plugin>
                     <groupId>com.coderplus.maven.plugins</groupId>
                     <artifactId>copy-rename-maven-plugin</artifactId>
                     <version>1.0.1</version>
@@ -98,7 +103,7 @@
                 <plugin>
                     <groupId>com.akathist.maven.plugins.launch4j</groupId>
                     <artifactId>launch4j-maven-plugin</artifactId>
-                    <version>2.1.3</version>
+                    <version>2.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
