--- a/battleships-resurrection/battleships-client-pc/pom.xml
+++ b/battleships-resurrection/battleships-client-pc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.igormaznitsa</groupId>
         <artifactId>battleships-resurrection</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>battleships-client-pc</artifactId>
@@ -22,7 +22,7 @@
             <properties>
                 <embedded.jdk.provider>BELLSOFT</embedded.jdk.provider>
                 <embedded.jdk.type>jdk</embedded.jdk.type>
-                <embedded.jdk.version>19.0.1+11</embedded.jdk.version>
+                <embedded.jdk.version>20+37</embedded.jdk.version>
             </properties>
             <dependencies>
                 <dependency>
@@ -82,11 +82,11 @@
                                 ${basedir}/src/assembly/windows/appico.ico
                             </icon>
                             <versionInfo>
-                                <fileVersion>1.1.2.0</fileVersion>
-                                <productVersion>1.1.2.0</productVersion>
+                                <fileVersion>1.1.3.0</fileVersion>
+                                <productVersion>1.1.3.0</productVersion>
                                 <txtFileVersion>${project.version}</txtFileVersion>
                                 <fileDescription>BattleShips Resurrection PC client</fileDescription>
-                                <copyright>2001-2022 Igor Maznitsa</copyright>
+                                <copyright>2001-2023 Igor Maznitsa</copyright>
                                 <txtProductVersion>${project.version}</txtProductVersion>
                                 <productName>${project.name}</productName>
                                 <companyName>igormaznitsa.com</companyName>
@@ -493,6 +493,7 @@
                                                 <exclude>**/ASSEMBLY_EXCEPTION</exclude>
                                                 <exclude>**/ADDITIONAL_LICENSE_INFO</exclude>
                                                 <exclude>**/LICENSE</exclude>
+                                                <exclude>**/cldr.md</exclude>
                                             </excludes>
                                         </resource>
                                         <resource>
