--- a/battleships-resurrection/battleships-pc-win-launcher/pom.xml
+++ b/battleships-resurrection/battleships-pc-win-launcher/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.igormaznitsa</groupId>
     <artifactId>battleships-resurrection</artifactId>
-    <version>1.1.2</version>
+    <version>1.1.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>battleships-pc-win-launcher</artifactId>
@@ -16,7 +16,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <mvn.golang.go.version>1.19.4</mvn.golang.go.version>
+    <mvn.golang.go.version>1.20.2</mvn.golang.go.version>
     <mvn.golang.wrapper.version>2.3.10</mvn.golang.wrapper.version>
     <maven.test.skip>true</maven.test.skip>
     <target.name>battleships-resurrection</target.name>
